Schedule: Fixed one z-index issue.

--- a/app/assets/stylesheets/schedule.scss
+++ b/app/assets/stylesheets/schedule.scss
@@ -81,6 +81,7 @@
   color: white;
   border: 2px solid #0000ff;
   background: #8080e0;
+  z-index: 1; /* Make sure selected course is on top of other courses */
 }
 
 .plan .unsatisfied-postreq {
